style.css
body {
    font-family: 'Poppins';
    font-size: 22px;
}
@media screen and (max-width: 768px){
.mobile-background{
    width: Hug (375px);
    height: Hug (604px);
    top: 92px;
    padding: 114px, 24px, 114px, 24px;
    gap: 12px;
    position: absolute;
    margin-top: 85px;
}
.mobile-navbar{
    background-color: white ;
    display: flex;
    justify-content: space-between;
    width: 375px;
    height: 48px;
    top: 44px;
    padding: 4px 24px 4px 12px;
    
    
}
.mobile-logo {
    text-decoration: none;
    color: #6070FF;
    font-weight: 700;
    width: Hug (100px);
    height: Hug (40px);
    top: 4px;
    left: 12px;
    padding: 10px, 12px, 10px, 12px;

}
.mobile-icon{
    width: Hug (40px);
    height: Hug (40px);
    top: 4px;
    left: 311px;
    padding: 8px;
    border-radius: 8px;
    margin-right: 15px;
    }
.mobile-heading{
    color:#172B4D;
    width: 327px;
    height: 150px;
    font-family: Poppins;
    font-weight: 700;
    line-height: 52px;
    text-align: left;
    position: relative;
    padding: 17px;
    margin-top: 50px ;
}
.mobile-paragraph{
    width: 327px;
    height: 146px;
    font-family: Poppins;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    letter-spacing: 0em;
    text-align: left;   
    padding: 17px;
}
.mobile-connect{
    color:#7F8CFF;
    width: 117px;
    height: 24px;
    font-family: Poppins;
    font-size: 14px;
    font-weight: 500;
    line-height: 24px;
    letter-spacing: 0em;
    text-align: left;
    margin-left: 17px;
    font-weight: 550;
}
.mobile-socials{
    margin-left: 17px;
    margin-top: 5px;
}
.mobile-page2{
    width: 375px;
    height: 2,788px;
    top: 718px;
    padding: 114px 24px 114px 24px;
    gap: 88px;
}
.mobile-page2data{
    width: 296px;
    height: 540px;
    padding: 16px;
    border-radius: 16px;
    border: 1px;
    gap: 12px;
    border: 1px solid #DFE1E6;

}
.mobile-page2box{
    width: 295px;
    height: 220px;
    border-radius: 8px;
    
}
.mobile-page2text{
    width: 295px;
    height: 288px;
    gap: 12px;
    
}
.mobile-page3{
    width: 300px;
    height: 550px;
    padding: 16px;
    border-radius: 16px;
    border: 1px;
    gap: 12px;
    border: 1px solid #DFE1E6;
}
.mobile-page3box{
    width: 295px;
    height: 220px;
    border-radius: 8px;
}
.mobile-page4{
    width: 300px;
    height: 500px;
    padding: 16px;
    border-radius: 16px;
    border: 1px;
    gap: 12px;
    border: 1px solid #DFE1E6;
    
}
.mobile-page4box{
    width: 295px;
    height: 220px;
    border-radius: 8px;
}
.mobile-page5{
    width: 300px;
    height: 550px;
    padding: 16px;
    border-radius: 16px;
    border: 1px;
    gap: 12px;
    border: 1px solid #DFE1E6;
}
.mobile-page5box{
    width: 295px;
    height: 220px;
    border-radius: 8px;
}
.mobile-page6{
    width: 375px;
    height: 1,062.15px;
    top: 3506px;
    padding: 114px 24px 114px 24px;
    gap: 24px;
    
}
.mobile-aboutmyself{
    width: 327px;
    height: 346px;
    gap: 12px;
}
.mobile-skill{
    width: 327px;
    height: 464.15px;
}
.mobile-contactme{
    width: 375px;
    height: 779px;
    top: 5410px;
}
.mobile-contactheading{
    font-family: Poppins;
    font-size: 24px;
    font-weight: 700;
    line-height: 52px;
    letter-spacing: 0em;
    text-align: center;
    color: #EBEBFF;    
    width: 370px;
    height: 56px;
    margin-top: 50px;
}
.mobile-contactparagraph{
    font-family: Poppins;
    font-size: 17px;
    font-weight: 400;
    line-height: 28px;
    letter-spacing: 0em;
    text-align: center;
    color: #EBEBFF;    
    width: 327px;
    height: 137px;
    margin-left: 17px;
}
.mobile-contactname{
    width: 280px;
    height: 35px;
    border-radius: 2px;
    border: 1px;
    margin-left: 43px;
    margin-top: 30px;
}
.mobile-contactemail{
    width: 280px;
    height: 35px;
    border-radius: 2px;
    border: 1px;
    margin-left: 43px;
    margin-top: 15px;
    
}
.mobile-contactmessage{
    font-family: poppins;
    width: 280px;
    height: 160px;
    border-radius: 8px;
    border: 1px;
    border-color: white;
    margin-left: 43px;
    margin-top: 15px;
    
}
.mobile-contactbutton{
    font-family: poppins;
    width: 142px;
    height: 48px;
    left: 24px;
    font-size: 15px;
    padding: 12px 16px 12px 16px;
    border-radius: 8px;
    margin-left: 43px;
    margin-top: 15px;
    border-color: white;
    color: #6070FF;
    ;
}
.mobile-contactme-image{
    position: absolute;
    margin-top: -100px;
}
.mobile-contactme-text{
    position: relative;
}
.web-container{
    display: none;
}
}
/* ... */

